add html tags and basic styles for challenge section

--- a/source/index.html
+++ b/source/index.html
@@ -231,6 +231,72 @@
             <button class="sale__button">Download white paper</button>
           </div>
         </section>
+        <section class="challenge">
+          <h2 class="challenge__title">
+            Challenges on the Global Lotto Industry
+          </h2>
+          <p class="challenge__text">
+            Issues and challenges in industry have not only hurt the industry, but have also hindered its growth.  We look at the more pressing reasons why today’s traditional
+            lotteries need to evolve.
+          </p>
+          <ul class="challenge__list">
+            <li class="challenge__item">
+              <div class="challenge__img-wrap">
+                <img src="images/challenge-1.png" alt="Lack Fairness Transparency">
+              </div>
+              <div class="challenge__desc">
+                <h4 class="challenge__item-title">Lack Fairness Transparency</h4>
+                <p class="challenge__item-text">
+                  A recent study went into how exactly a lottery can be rigged, tampered and cheated – arising questions such us the validity and “realness” of the winning ticket; fair allocation of ticket proceeds to the prize pool; is the winning number drawn in a random and secure manner; and does someone really win it and not just go to a handful operators.  A lottery based on smart contracts should address each and one of these concerns.
+                </p>
+              </div>
+            </li>
+            <li class="challenge__item">
+              <div class="challenge__img-wrap">
+                <img src="images/challenge-2.png" alt="Lack of Innovation">
+              </div>
+              <div class="challenge__desc">
+                <h4 class="challenge__item-title">Lack of Innovation</h4>
+                <p class="challenge__item-text">
+                  Traditional Lotteries have not shown any innovation and don’t have much room for variety in game development.  Mitoshi cryptolotto will offer fresh and winnable draws without compromising on fairness and on its entertainment value.
+                </p>
+              </div>
+            </li>
+            <li class="challenge__item">
+              <div class="challenge__img-wrap">
+                <img src="images/challenge-3.png" alt="Regulatory Setbacks">
+              </div>
+              <div class="challenge__desc">
+                <h4 class="challenge__item-title">Regulatory Setbacks</h4>
+                <p class="challenge__item-text">
+                  Traditional lotteries today are hindered with regulations – from territorial limits that prevent audiences from other countries in participating into the big jackpot draws to taxes and extra charges.  Centralized or monopolized operators bring about regulations, to include even state controlled ones.  These regulations hurt the prize money that should be going to the players.
+                </p>
+              </div>
+            </li>
+            <li class="challenge__item">
+              <div class="challenge__img-wrap">
+                <img src="images/challenge-4.png" alt="Long Payouts">
+              </div>
+              <div class="challenge__desc">
+                <h4 class="challenge__item-title">Long Payouts</h4>
+                <p class="challenge__item-text">
+                  Spanning anywhere from weeks to months after the results, traditional lotteries have been notorious to distributing prize winnings extremely late with a lot of verification checks in the identity and the ticket.  This is a major inconvenience to the players, and a practice that shouldn’t be tolerated.
+                </p>
+              </div>
+            </li>
+            <li class="challenge__item">
+              <div class="challenge__img-wrap">
+                <img src="images/challenge-5.png" alt="Stunted Growth">
+              </div>
+              <div class="challenge__desc">
+                <h4 class="challenge__item-title">Stunted Growth</h4>
+                <p class="challenge__item-text">
+                  Expanding markets is a formidable challenge in the industry because of the difficulty in attracting new players or retaining existing ones, which not only makes it likely to be reliant on addiction.  This makes it somewhat reprehensible, but this also makes it more difficult to pursue and implement new sales channels.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </section>
       </div>
     </main>
 	</div>
