add html tags and basic styles for solution section

--- a/source/index.html
+++ b/source/index.html
@@ -297,6 +297,23 @@
             </li>
           </ul>
         </section>
+        <section class="solution">
+          <h2 class="solution__title">Our Solution</h2>
+          <div class="solution__wrapper">
+            <h4 class="solution__subtitle">
+              Integrating Smart Contracts on a Blockchain platform
+            </h4>
+            <p class="solution__text">
+              Blockchain technology presents several advantages to the lottery industry, making its integration not only immensely beneficial but poses it as a crucial step to further expand the industry. Integrating blockchain technology decentralizes the chances, making the lottery more transparent and more accessible. By making use of Ethereum contracts, Mitoshi will build a lottery that is fair, transparent and secure – and globally accessible to those with an internet and a smartphone.
+            </p>
+            <p class="solution__text">
+              Furthermore, decentralized technology is a way to work around regulatory policies that inhibit the growth of the lotto industry while making its market much more expandable and involved. Mitoshi CryptoLotto will then be accessible anytime, anywhere with the ease of transaction provided through cryptocurrency via blockchain technology.
+            </p>
+          </div>
+          <button class="solution__button">
+            Mitoshi CryptoLotto Features
+          </button>
+        </section>
       </div>
     </main>
 	</div>
