add html tags and basic styles for how section

--- a/source/index.html
+++ b/source/index.html
@@ -314,6 +314,37 @@
             Mitoshi CryptoLotto Features
           </button>
         </section>
+        <section class="how">
+          <div class="how__img-wrap">
+            <img src="images/phone.png" alt="How it works">
+          </div>
+          <div class="how__desc">
+            <h2 class="how__title">How it Works</h2>
+            <ul class="how__list">
+              <li class="how__item">
+                <h3 class="how__subtitle">Mitoshi Mobile Application </h3>
+                <p class="how__text">
+                  The Mitoshi mobile application will be designed to access the mitoshi platform. This app will hold all capabilities to join each draw as well as navigate through other gaming opportunities provided by the Mitoshi platform. The application can be accessed through both IOS and android.
+                </p>
+              </li>
+              <li class="how__item">
+                <h3 class="how__subtitle">Payout Methods</h3>
+                <p class="how__text">
+                  Those who want to purchase these lotto tickets can either go to our website or download the app. They can register and an e-wallet will be assigned to them. They either deposit cash or transfer their bitcoin or ethereum assets into the e-wallets. And can purchase Mitoshi play tokens after these assets are credited. Mitoshi lottery can only be purchased through Mitoshi tokens and will be priced at 1 Mitoshi coin per ticket.
+                </p>
+              </li>
+              <li class="how__item">
+                <h3 class="how__subtitle">Airdrops, Rewards and Bounty</h3>
+                <p class="how__text">
+                  Mitoshi will allocate millions of free tokens for airdrops, rewards and bounty.  Find out more on how you can qualify to own Mitoshi tokens absolutely free.  So you can start winning.
+                </p>
+              </li>
+            </ul>
+            <button class="how__button">
+              Rewards & Bounty Terms & Conditions
+            </button>
+          </div>
+        </section>
       </div>
     </main>
 	</div>
