--- a/source/index.html
+++ b/source/index.html
@@ -345,6 +345,68 @@
             </button>
           </div>
         </section>
+        <section class="roadmap">
+          <h2 class="roadmap__title">Roadmap</h2>
+          <div class="roadmap__container">
+            <ul class="roadmap__list roadmap__list--start">
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">April to June 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Research</li>
+                  <li class="roadmap__sublist-item">Business case formation</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">May to August 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Team formation</li>
+                  <li class="roadmap__sublist-item">Preparation of sale</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">September 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Private sale</li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="roadmap__list roadmap__list--center">
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">November 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Pre sale (20% bonus)</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">October 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Pre sale (30% bonus)</li>
+                </ul>
+              </li>
+            </ul>
+            <ul class="roadmap__list roadmap__list--end">
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">December 2018</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Pre sale (10% bonus)</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">January 2019</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Pre sale (No bonus)</li>
+                  <li class="roadmap__sublist-item">Release of Beta Version</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">February 2019</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Exchange listing</li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </section>
       </div>
     </main>
 	</div>
