add responsive styles for team section and geneeral tags

--- a/source/index.html
+++ b/source/index.html
@@ -413,30 +413,35 @@
             <ul class="team__list team__list--team">
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
@@ -448,30 +453,35 @@
             <ul class="team__list">
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
               </li>
               <li class="team__list-item">
                 <div class="team__img-wrap">
+                  <img src="images/team-1.png" alt="Member of Mithoshi Team">
                 </div>
                 <p class="team__member-name">Jhon Mitoshi</p>
                 <p class="team__member-occup">CTO</p>
@@ -529,9 +539,9 @@
           <li class="footer__item footer__item--twitter"><a href=""></a></li>
         </ul>
         <p class="footer__group">
-          <a href="#">Mitoshi Worldwide Holdings Ltd. @ 2018</a>
+          <span>Mitoshi Worldwide Holdings Ltd. @ 2018</span>
           <span>|</span>
-          <a href="#">All Rights Reserved</a>
+          <span href="#">All Rights Reserved</span>
         </p>
         <p class="footer__group">
           <a href="#">Privacy Policy</a>
