add responsive styles to footer

--- a/source/index.html
+++ b/source/index.html
@@ -550,14 +550,14 @@
         </ul>
         <p class="footer__group">
           <span>Mitoshi Worldwide Holdings Ltd. @ 2018</span>
-          <span>|</span>
+          <span>|</span><br>
           <span href="#">All Rights Reserved</span>
         </p>
         <p class="footer__group">
           <a href="#">Privacy Policy</a>
-          <span>|</span>
+          <span>|</span><br>
           <a href="#">Terms and Conditions</a>
-          <span>|</span>
+          <span>|</span><br>
           <a href="#">Disclaimer</a>
         </p>
       </div>
