adв responsive styles to challenge section

--- a/source/index.html
+++ b/source/index.html
@@ -233,7 +233,9 @@
         </section>
         <section class="challenge" id="challenge">
           <h2 class="challenge__title">
-            Challenges on the Global Lotto Industry
+            Challenges<br>
+            on the Global<br>
+            Lotto Industry
           </h2>
           <p class="challenge__text">
             Issues and challenges in industry have not only hurt the industry, but have also hindered its growth.  We look at the more pressing reasons why today’s traditional
