--- a/source/index.html
+++ b/source/index.html
@@ -85,8 +85,7 @@
           </h2>
           <div class="about__group">
             <div class="about__video-wrap">
-              <iframe width="512" height="286"
-                      src="https://www.youtube.com/embed/wAeGLnxyXuQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/wAeGLnxyXuQ?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
               </video>
             </div>
             <div class="about__desc">
