finish width js code

--- a/source/index.html
+++ b/source/index.html
@@ -21,32 +21,32 @@
         <div class="header__group">
           <nav class="main-nav">
             <ul class="main-nav__list">
-              <li class="main-nav__item main-nav__item--active">
-                <a href="#home">Home</a>
+              <li class="main-nav__item">
+                <a class="main-nav__link main-nav__link--active" href="#home">Home</a>
               </li>
               <li class="main-nav__item">
-                <a href="#about">About Mitoshi</a>
+                <a class="main-nav__link" href="#about">About Mitoshi</a>
               </li>
               <li class="main-nav__item">
-                <a href="#sale">Token Sale</a>
+                <a class="main-nav__link" href="#sale">Token Sale</a>
               </li>
               <li class="main-nav__item">
-                <a href="#challenge">Challenges</a>
+                <a class="main-nav__link" href="#challenge">Challenges</a>
               </li>
               <li class="main-nav__item">
-                <a href="#solution">Our solutions</a>
+                <a class="main-nav__link" href="#solution">Our solutions</a>
               </li>
               <li class="main-nav__item">
-                <a href="#how">How it works</a>
+                <a class="main-nav__link" href="#how">How it works</a>
               </li>
               <li class="main-nav__item">
-                <a href="#roadmap">Roadmap</a>
+                <a class="main-nav__link" href="#roadmap">Roadmap</a>
               </li>
               <li class="main-nav__item">
-                <a href="#team">Team</a>
+                <a class="main-nav__link" href="#team">Team</a>
               </li>
               <li class="main-nav__item">
-                <a href="#contacts">Connect with Us</a>
+                <a class="main-nav__link" href="#contacts">Connect with Us</a>
               </li>
             </ul>
           </nav>
@@ -573,7 +573,7 @@
 
     </footer>
 	</div>
-	<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
