add some additional styles: cursor-pointer, footeк and contacts links

--- a/source/index.html
+++ b/source/index.html
@@ -518,7 +518,8 @@
                 class="contacts__list-item contacts__list-item--medium"><a
                 href=""></a></li>
               <li
-                class="contacts__list-item contacts__list-item--reddit"><a href=""></a></li>
+                class="contacts__list-item contacts__list-item--reddit"><a
+                href=""></a></li>
               <li
                 class="contacts__list-item contacts__list-item--github"><a href=""></a></li>
               <li
