--- a/source/index.html
+++ b/source/index.html
@@ -7,6 +7,8 @@
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Mitoshi CryptoLotto ICO</title>
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 	<link href="css/style.min.css" rel="stylesheet">
 </head>
 <body>
