--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 	<div class="page-wrapper">
 		<header class="header">
       <div class="header__wrapper">
-        <a href="#" class="header__logo">
+        <a class="header__logo">
           <img src="images/logo.png" width="60" height="60" alt="Mitoshi CryptoLotto ICO"
                title="Mitoshi CryptoLotto ICO">
         </a>
