--- a/source/index.html
+++ b/source/index.html
@@ -519,17 +519,19 @@
             <ul class="contacts__list">
               <li
                 class="contacts__list-item contacts__list-item--medium"><a
-                href=""></a></li>
+                href="#"></a></li>
               <li
                 class="contacts__list-item contacts__list-item--reddit"><a
-                href=""></a></li>
+                href="#"></a></li>
               <li
-                class="contacts__list-item contacts__list-item--github"><a href=""></a></li>
+                class="contacts__list-item contacts__list-item--github"><a
+                href="#"></a></li>
               <li
                 class="contacts__list-item contacts__list-item--bitcoin"><a
                 href=""></a></li>
               <li
-                class="contacts__list-item contacts__list-item--stemit"><a href=""></a></li>
+                class="contacts__list-item contacts__list-item--stemit"><a
+                href="#"></a></li>
             </ul>
           </div>
           <div class="contacts__group">
@@ -554,12 +556,12 @@
     <footer class="footer">
       <div class="footer__wrapper">
         <ul class="footer__list">
-          <li class="footer__item footer__item--telegram"><a href=""></a></li>
-          <li class="footer__item footer__item--whatsapp"><a href=""></a></li>
-          <li class="footer__item footer__item--mail"><a href=""></a></li>
-          <li class="footer__item footer__item--facebook"><a href=""></a></li>
-          <li class="footer__item footer__item--lkdin"><a href=""></a></li>
-          <li class="footer__item footer__item--twitter"><a href=""></a></li>
+          <li class="footer__item footer__item--telegram"><a href="#"></a></li>
+          <li class="footer__item footer__item--whatsapp"><a href="#"></a></li>
+          <li class="footer__item footer__item--mail"><a href="#"></a></li>
+          <li class="footer__item footer__item--facebook"><a href="#"></a></li>
+          <li class="footer__item footer__item--lkdin"><a href="#"></a></li>
+          <li class="footer__item footer__item--twitter"><a href="#"></a></li>
         </ul>
         <p class="footer__group">
           <span>Mitoshi Worldwide Holdings Ltd. @ 2018</span>
