add footer youtube svg-icon

--- a/source/index.html
+++ b/source/index.html
@@ -852,6 +852,7 @@
           <li class="footer__item footer__item--facebook"><a href="http://m.facebook.com/MitoshiCryptoLotto/" target="_blank"></a></li>
           <li class="footer__item footer__item--lkdin"><a href="http://www.linkedin.com/company/mitoshi/" target="_blank"></a></li>
           <li class="footer__item footer__item--twitter"><a href="http://mobile.twitter.com/mitoshicrypto" target="_blank"></a></li>
+          <li class="footer__item footer__item--youtube"><a href="https://www.youtube.com/channel/UCG2rcEGPN6Q_AQgSN7s_ADA/featured?disable_polymer=1" target="_blank"></a></li>
         </ul>
         <p class="footer__group">
           <span>Mitoshi Worldwide Holdings Ltd. @ 2018</span>
