change links of pdf files and clear cash

--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Mitoshi CryptoLotto ICO</title>
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-	<link href="css/style.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico?v=1" type="image/x-icon">
+  <link rel="icon" href="favicon.ico?v=1" type="image/x-icon">
+	<link href="css/style.min.css?v=1" rel="stylesheet">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -321,7 +321,7 @@
               Furthermore, decentralized technology is a way to work around regulatory policies that inhibit the growth of the lotto industry while making its market much more expandable and involved. Mitoshi CryptoLotto will then be accessible anytime, anywhere with the ease of transaction provided through cryptocurrency via blockchain technology.
             </p>
           </div>
-          <a class="solution__button" href="files/Features.pdf" target="_blank">
+          <a class="solution__button" href="https://drive.google.com/file/d/17Ch-TQFkza68qy0R9sfg9UWlAOlg3is7/view" target="_blank">
             Mitoshi CryptoLotto Features
           </a>
         </section>
@@ -361,7 +361,7 @@
                 </p>
               </li>
             </ul>
-            <a class="how__button" href="files/Rewards_Bounty.pdf" target="_blank">
+            <a class="how__button" href="https://drive.google.com/file/d/1-STtiw1ShmE6e_686fysjgiuFSd8mNa_/view" target="_blank">
               Rewards & Bounty Terms & Conditions
             </a>
           </div>
@@ -749,7 +749,7 @@
             <p class="contacts__text">
               Frequently asked questions on how you can win with Mitoshi.
             </p>
-            <a class="contacts__button" href="files/FAQS.pdf" target="_blank">
+            <a class="contacts__button" href="https://drive.google.com/file/d/19GrtsLFBZvT2FivCQwAGxWg_-y3UVszf/view" target="_blank">
               View FAQS
             </a>
           </div>
@@ -780,17 +780,17 @@
           <span href="#">All rights reserved</span>
         </p>
         <p class="footer__group">
-          <a href="files/Privacy_Policy.pdf" target="_blank">Privacy policy</a>
+          <a href="https://drive.google.com/file/d/1obc1E9MxGge9D7eyPiE_WdJ6JxMsAGLh/view" target="_blank">Privacy policy</a>
           <span>|</span><br>
-          <a href="files/Terms_Conditions.pdf" target="_blank">Terms and conditions</a>
+          <a href="https://drive.google.com/file/d/1H3SAhspuvCFqMFnJkPFg1LFjgVUpuYmk/view" target="_blank">Terms and conditions</a>
           <span>|</span><br>
-          <a href="files/Disclaimer.pdf" target="_blank">Disclaimer</a>
+          <a href="https://drive.google.com/file/d/1MmU8n0ARZJtTpqacX0W4PFiXTHy4W8H2/view" target="_blank">Disclaimer</a>
         </p>
       </div>
 
     </footer>
 	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/main.js"></script>
+	<script src="js/main.js?v=1"></script>
 </body>
 </html>
