add partners links

--- a/source/index.html
+++ b/source/index.html
@@ -701,19 +701,19 @@
                 <p class="team__member-name">Loftchain</p>
               </li>
               <li class="team__list-item">
-                <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="#" target="_blank">
+                <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://cointraffic.io/" target="_blank">
                   <img src="images/partner-2.svg" alt="Member of Mithoshi Team">
                 </a>
               <p class="team__member-name">Cointraffic</p>
             </li>
               <li class="team__list-item team__list-item--partners">
-              <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="#" target="_blank">
+              <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://www.experfy.com/" target="_blank">
                 <img src="images/partner-3.png" alt="Member of Mithoshi Team">
               </a>
               <p class="team__member-name">Experfy</p>
             </li>
               <li class="team__list-item team__list-item--partners">
-              <a class="team__img-wrap team__img-wrap--partners" href="#" target="_blank">
+              <a class="team__img-wrap team__img-wrap--partners" href="https://mosspole.com/" target="_blank">
                 <img src="images/partner-4.png" alt="Member of Mithoshi Team">
               </a>
               <p class="team__member-name">Mosspole Consulting</p>
