change team section styles and remake roadmap section

--- a/source/index.html
+++ b/source/index.html
@@ -373,59 +373,81 @@
           </div>
           <div class="roadmap__container">
             <ul class="roadmap__list roadmap__list--start">
-              <li class="roadmap__item">
+              <li class="roadmap__item roadmap__item--medium">
                 <h4 class="roadmap__subtitle">April to June 2018</h4>
                 <ul class="roadmap__sublist">
                   <li class="roadmap__sublist-item">Research</li>
                   <li class="roadmap__sublist-item">Business case formation</li>
                 </ul>
               </li>
-              <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">May to August 2018</h4>
+              <li class="roadmap__item roadmap__item--big">
+                <h4 class="roadmap__subtitle">July to September 2018</h4>
                 <ul class="roadmap__sublist">
                   <li class="roadmap__sublist-item">Team formation</li>
                   <li class="roadmap__sublist-item">Preparation of sale</li>
                 </ul>
               </li>
-              <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">September 2018</h4>
+              <li class="roadmap__item roadmap__item--big">
+                <h4 class="roadmap__subtitle">October 2018 <span>to January 2019</span></h4>
                 <ul class="roadmap__sublist">
                   <li class="roadmap__sublist-item">Private sale</li>
+                </ul>
+              </li>
+              <li class="roadmap__item roadmap__item--medium">
+                <h4 class="roadmap__subtitle">February 2019</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Presale (30% Bonus)</li>
+                  <li class="roadmap__sublist-item">Start of Games Development</li>
                 </ul>
               </li>
             </ul>
             <ul class="roadmap__list roadmap__list--center">
               <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">October 2018</h4>
+                <h4 class="roadmap__subtitle">March 2019</h4>
                 <ul class="roadmap__sublist">
-                  <li class="roadmap__sublist-item">Pre sale (30% bonus)</li>
+                  <li class="roadmap__sublist-item">Presale (25% Bonus)</li>
                 </ul>
               </li>
               <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">November 2018</h4>
+                <h4 class="roadmap__subtitle">April 2019</h4>
                 <ul class="roadmap__sublist">
-                  <li class="roadmap__sublist-item">Pre sale (20% bonus)</li>
+                  <li class="roadmap__sublist-item">Presale (20% Bonus)</li>
+                </ul>
+              </li>
+              <li class="roadmap__item">
+                <h4 class="roadmap__subtitle">May 2019</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Presale (15% Bonus)</li>
                 </ul>
               </li>
             </ul>
             <ul class="roadmap__list roadmap__list--end">
-              <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">December 2018</h4>
+              <li class="roadmap__item roadmap__item--little">
+                <h4 class="roadmap__subtitle">June 2019</h4>
                 <ul class="roadmap__sublist">
-                  <li class="roadmap__sublist-item">Pre sale (10% bonus)</li>
+                  <li class="roadmap__sublist-item">Presale (10% Bonus)</li>
                 </ul>
               </li>
-              <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">January 2019</h4>
+              <li class="roadmap__item roadmap__item--big">
+                <h4 class="roadmap__subtitle">July 2019</h4>
                 <ul class="roadmap__sublist">
-                  <li class="roadmap__sublist-item">Pre sale (No bonus)</li>
-                  <li class="roadmap__sublist-item">Release of Beta Version</li>
+                  <li class="roadmap__sublist-item">Presale (5% Bonus)</li>
+                  <li class="roadmap__sublist-item">Launch of www.playmitoshi.com website</li>
+                  <li class="roadmap__sublist-item">Launch of 4 Lottery Draws</li>
                 </ul>
               </li>
-              <li class="roadmap__item">
-                <h4 class="roadmap__subtitle">February 2019</h4>
+              <li class="roadmap__item roadmap__item--medium">
+                <h4 class="roadmap__subtitle">August 2019</h4>
                 <ul class="roadmap__sublist">
-                  <li class="roadmap__sublist-item">Exchange listing</li>
+                  <li class="roadmap__sublist-item">CrowdSale Period (No Bonus)</li>
+                </ul>
+              </li>
+              <li class="roadmap__item roadmap__item--big">
+                <h4 class="roadmap__subtitle">September 2019</h4>
+                <ul class="roadmap__sublist">
+                  <li class="roadmap__sublist-item">Exchange Listing Exchange</li>
+                  <li class="roadmap__sublist-item">Mobile App Release of Games [Android]</li>
+                  <li class="roadmap__sublist-item">Launch of 3 More Lottery Draws</li>
                 </ul>
               </li>
             </ul>
@@ -573,13 +595,13 @@
                 <p class="team__member-name">Jerick Alcancia</p>
                 <p class="team__member-occup">Motion Graphic Artist</p>
               </li>
-              <li class="team__list-item team__list-item--pr">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/randy-pagatpatan-b773a388/" target="_blank">
-                  <img src="images/team-15.jpg" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Randy Pagatpatan</p>
-                <p class="team__member-occup">Graphic Design</p>
-              </li>
+              <!--<li class="team__list-item team__list-item&#45;&#45;pr">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/randy-pagatpatan-b773a388/" target="_blank">-->
+                  <!--<img src="images/team-15.jpg" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Randy Pagatpatan</p>-->
+                <!--<p class="team__member-occup">Graphic Design</p>-->
+              <!--</li>-->
               <li class="team__list-item team__list-item--pr">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/rmcccos/" target="_blank">
                   <img src="images/team-16.png" alt="Member of Mithoshi Team">
@@ -624,13 +646,13 @@
                 <p class="team__member-name">Chen Chee Fah</p>
                 <p class="team__member-occup">Community Management (Mandarin)</p>
               </li>
-              <li class="team__list-item team__list-item--media">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/gracious-grace-06b5a716b/" target="_blank">
-                  <img src="images/team-21.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Gracious Ezendu</p>
-                <p class="team__member-occup">Community Management</p>
-              </li>
+              <!--<li class="team__list-item team__list-item&#45;&#45;media">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/gracious-grace-06b5a716b/" target="_blank">-->
+                  <!--<img src="images/team-21.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Gracious Ezendu</p>-->
+                <!--<p class="team__member-occup">Community Management</p>-->
+              <!--</li>-->
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://www.linkedin.com/in/awele-kimberly-ajiduah-8981a075/" target="_blank">
                   <img src="images/team-22.png" alt="Member of Mithoshi Team">
@@ -654,41 +676,43 @@
               </li>
             </ul>
           </div>
-          <div class="team__block">
-            <h4 class="team__subtitle">
-              Advisors
-            </h4>
-            <ul class="team__list team__list--advisors">
-              <li class="team__list-item team__list-item--advisors">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/simon-cocking-20540135/" target="_blank">
-                  <img src="images/team-25.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Simon Cocking</p>
-                <p class="team__member-occup">ICO Advisor</p>
-              </li>
-              <li class="team__list-item team__list-item--advisors">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/felixhoe/" target="_blank">
-                  <img src="images/team-26.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">Felix Hoe</p>
-                <p class="team__member-occup">ICO Advisor</p>
-              </li>
-              <li class="team__list-item team__list-item--advisors">
-                <a class="team__img-wrap" href="https://www.linkedin.com/in/jamesflorentino/" target="_blank">
-                  <img src="images/team-27.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">James Florentino</p>
-                <p class="team__member-occup">ICO Advisor </p>
-              </li>
-              <li class="team__list-item team__list-item--advisors">
-                <a class="team__img-wrap" href="#" target="_blank">
-                  <img src="images/team-28.png" alt="Member of Mithoshi Team">
-                </a>
-                <p class="team__member-name">-</p>
-                <p class="team__member-occup">Advisor [IT & IT Security]</p>
-              </li>
-            </ul>
-          </div>
+
+          <!--<div class="team__block">-->
+            <!--<h4 class="team__subtitle">-->
+              <!--Advisors-->
+            <!--</h4>-->
+            <!--<ul class="team__list team__list&#45;&#45;advisors">-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;advisors">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/simon-cocking-20540135/" target="_blank">-->
+                  <!--<img src="images/team-25.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Simon Cocking</p>-->
+                <!--<p class="team__member-occup">ICO Advisor</p>-->
+              <!--</li>-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;advisors">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/felixhoe/" target="_blank">-->
+                  <!--<img src="images/team-26.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Felix Hoe</p>-->
+                <!--<p class="team__member-occup">ICO Advisor</p>-->
+              <!--</li>-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;advisors">-->
+                <!--<a class="team__img-wrap" href="https://www.linkedin.com/in/jamesflorentino/" target="_blank">-->
+                  <!--<img src="images/team-27.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">James Florentino</p>-->
+                <!--<p class="team__member-occup">ICO Advisor </p>-->
+              <!--</li>-->
+              <!--<li class="team__list-item team__list-item&#45;&#45;advisors">-->
+                <!--<a class="team__img-wrap" href="#" target="_blank">-->
+                  <!--<img src="images/team-28.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">-</p>-->
+                <!--<p class="team__member-occup">Advisor [IT & IT Security]</p>-->
+              <!--</li>-->
+            <!--</ul>-->
+          <!--</div>-->
+
           <div class="team__block">
             <h4 class="team__subtitle">
               Partners
@@ -704,20 +728,20 @@
                 <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://cointraffic.io/" target="_blank">
                   <img src="images/partner-2.svg" alt="Member of Mithoshi Team">
                 </a>
-              <p class="team__member-name">Cointraffic</p>
-            </li>
+                <p class="team__member-name">Cointraffic</p>
+              </li>
               <li class="team__list-item team__list-item--partners">
-              <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://www.experfy.com/" target="_blank">
-                <img src="images/partner-3.png" alt="Member of Mithoshi Team">
-              </a>
-              <p class="team__member-name">Experfy</p>
-            </li>
-              <li class="team__list-item team__list-item--partners">
-              <a class="team__img-wrap team__img-wrap--partners" href="https://mosspole.com/" target="_blank">
-                <img src="images/partner-4.png" alt="Member of Mithoshi Team">
-              </a>
-              <p class="team__member-name">Mosspole Consulting</p>
-            </li>
+                <a class="team__img-wrap team__img-wrap--partners team__img-wrap--partners-shrink" href="https://www.experfy.com/" target="_blank">
+                  <img src="images/partner-3.png" alt="Member of Mithoshi Team">
+                </a>
+                <p class="team__member-name">Experfy</p>
+              </li>
+              <!--<li class="team__list-item team__list-item&#45;&#45;partners">-->
+                <!--<a class="team__img-wrap team__img-wrap&#45;&#45;partners" href="https://mosspole.com/" target="_blank">-->
+                  <!--<img src="images/partner-4.png" alt="Member of Mithoshi Team">-->
+                <!--</a>-->
+                <!--<p class="team__member-name">Mosspole Consulting</p>-->
+              <!--</li>-->
             </ul>
           </div>
         </section>
