add team member's occupation and photo

--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
 				content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Mitoshi CryptoLotto ICO</title>
-  <link rel="shortcut icon" href="favicon.ico?v=1" type="image/x-icon">
-  <link rel="icon" href="favicon.ico?v=1" type="image/x-icon">
-	<link href="css/style.min.css?v=1" rel="stylesheet">
+  <link rel="shortcut icon" href="favicon.ico?v=2" type="image/x-icon">
+  <link rel="icon" href="favicon.ico?v=2" type="image/x-icon">
+	<link href="css/style.min.css?v=2" rel="stylesheet">
 </head>
 <body>
 	<div class="page-wrapper">
@@ -520,7 +520,7 @@
               </li>
               <li class="team__list-item team__list-item--management">
                 <a class="team__img-wrap" href="#" target="_blank">
-                  <img src="images/team-7.png" alt="Member of Mithoshi Team">
+                  <img src="images/team-7.jpg" alt="Member of Mithoshi Team">
                 </a>
                 <p class="team__member-name">Jocelyn Peralta</p>
                 <p class="team__member-occup">
@@ -665,14 +665,14 @@
                   <img src="images/team-23.png" alt="Member of Mithoshi Team">
                 </a>
                 <p class="team__member-name">Philip Smart Kolawole</p>
-                <p class="team__member-occup">-</p>
+                <p class="team__member-occup">Community Management</p>
               </li>
               <li class="team__list-item team__list-item--media">
                 <a class="team__img-wrap" href="https://ph.linkedin.com/in/hazel-olivar-1092ba13a" target="_blank">
                   <img src="images/team-24.png" alt="Member of Mithoshi Team">
                 </a>
                 <p class="team__member-name">Hazel Olivar</p>
-                <p class="team__member-occup">-</p>
+                <p class="team__member-occup">Community Management</p>
               </li>
             </ul>
           </div>
@@ -815,6 +815,6 @@
     </footer>
 	</div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="js/main.js?v=1"></script>
+	<script src="js/main.js?v=2"></script>
 </body>
 </html>
